tests/ui/feature-gates/feature-gate-abi-custom.stderr
error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:11:8
   |
LL | extern "custom" fn f7() {
   |        ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:16:12
   |
LL |     extern "custom" fn m7();
   |            ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:19:12
   |
LL |     extern "custom" fn dm7() {
   |            ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:30:12
   |
LL |     extern "custom" fn m7() {
   |            ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:39:12
   |
LL |     extern "custom" fn im7() {
   |            ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:45:18
   |
LL | type A7 = extern "custom" fn();
   |                  ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "custom" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-custom.rs:47:8
   |
LL | extern "custom" {}
   |        ^^^^^^^^
   |
   = note: see issue #140566 <https://github.com/rust-lang/rust/issues/140566> for more information
   = help: add `#![feature(abi_custom)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
